Device::encryptionInfo returned the entire certificate instead of the hash

BUG: 367897